@@ -11,8 +11,12 @@ all-local:
 
 install-exec-local: 
 	if test -z "$${LIBEXECDIR}"; then LIBEXECDIR=`$(APXS) -q LIBEXECDIR`; fi;\
+	if test -z "$${INCLUDEDIR}"; then INCLUDEDIR=`$(APXS) -q includedir`; fi;\
 	\
 	mkdir -p $(DESTDIR)$${LIBEXECDIR}; \
+	mkdir -p $(DESTDIR)$${INCLUDEDIR}; \
+	\
+	$(INSTALL) mod_magick.h $(DESTDIR)$${INCLUDEDIR}; \
 	\
 	$(APXS) -S LIBEXECDIR=$(DESTDIR)`$(APXS) -q LIBEXECDIR` -c -i $(DEF_LDLIBS) -Wc,"$(CFLAGS)" -Wc,"$(AM_CFLAGS)" -Wl,"$(LDFLAGS)" -Wl,"$(AM_LDFLAGS)" $(LIBS) @srcdir@/mod_magick.c; \
 	$(APXS) -S LIBEXECDIR=$(DESTDIR)`$(APXS) -q LIBEXECDIR` -c -i $(DEF_LDLIBS) -Wc,"$(CFLAGS)" -Wc,"$(AM_CFLAGS)" -Wl,"$(LDFLAGS)" -Wl,"$(AM_LDFLAGS)" $(LIBS) @srcdir@/mod_magick_colorspace.c; \
