@@ -1,6 +1,9 @@
 
 Changes with v1.0.1
 
+ *) Split mod_magick.h into a devel RPM package. [Graham
+    Leggett]
+
  *) Prevent spurious warnings when handling empty bodies, such
     as those from 304 Not Modified requests. [Graham Leggett]
 
